--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">Lab1_Basicss</string>
+    <string name="app_name">Lab_1</string>
+    <string name="name">Thanakit Kaokam</string>
+    <string name="study">ICE3/2</string>
+    <string name="nickname">Kot</string>
+    <string name="address">สาขาวิชาวิศวกรรมคอมพิเตอร์สาขาอุตสาหกรรม</string>
+    <string name="address1">วิทยาลัยเทคโนโลยีราชมงคลศรีวิชัย วิทยาลัยรัตภูมิ</string>
+    <color name="Bg1">#111999</color>
 </resources>
